# ChangeLog for dev-ruby/test-unit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test-unit/ChangeLog,v 1.54 2012/06/10 05:59:07 graaff Exp $

*test-unit-2.5.0 (10 Jun 2012)

  10 Jun 2012; Hans de Graaff <graaff@gentoo.org> +test-unit-2.5.0.ebuild:
  Version bump.

  02 Jun 2012; Hans de Graaff <graaff@gentoo.org> -test-unit-2.4.0.ebuild,
  -test-unit-2.4.2.ebuild, -test-unit-2.4.3.ebuild, -test-unit-2.4.5.ebuild:
  Remove old versions.

*test-unit-2.4.8 (07 Mar 2012)

  07 Mar 2012; Hans de Graaff <graaff@gentoo.org> +test-unit-2.4.8.ebuild:
  Version bump.

*test-unit-2.4.5 (28 Jan 2012)

  28 Jan 2012; Hans de Graaff <graaff@gentoo.org> +test-unit-2.4.5.ebuild:
  Version bump.

  03 Jan 2012; Jeroen Roovers <jer@gentoo.org> test-unit-2.4.0.ebuild,
  test-unit-2.4.2.ebuild, test-unit-2.4.3.ebuild:
  Marked ~hppa (bug #396663).

  01 Jan 2012; Hans de Graaff <graaff@gentoo.org> test-unit-1.2.3.ebuild,
  test-unit-2.1.2-r1.ebuild:
  Add ppc64 keyword for bug 332593. Non-arch commit but the code in question is
  quite similar to that in ruby 1.8 and the lack of this keyword currently
  breaks dependencies.

  01 Jan 2012; Hans de Graaff <graaff@gentoo.org> test-unit-2.4.3.ebuild:
  Add back ~hppa keyword which seems to have gotten lost around 2.0.5/2.0.6
  without any clear indication why. The lack of it currently also breaks
  dependencies.

*test-unit-2.4.3 (13 Dec 2011)

  13 Dec 2011; Hans de Graaff <graaff@gentoo.org> +test-unit-2.4.3.ebuild:
  Version bump.

  13 Dec 2011; Hans de Graaff <graaff@gentoo.org> -test-unit-2.2.0.ebuild,
  -test-unit-2.3.0.ebuild:
  Remove old versions.

  05 Dec 2011; Naohiro Aota <naota@gentoo.org> test-unit-2.4.0.ebuild:
  Add ~x86-fbsd.

*test-unit-2.4.2 (27 Nov 2011)

  27 Nov 2011; Hans de Graaff <graaff@gentoo.org> +test-unit-2.4.2.ebuild:
  Version bump.
