@@ -10,14 +10,14 @@ DIST test-unit-2.5.0.gem 97280 RMD160 daf5891aea2f56dee341c31056436ebd97ec7538 S
 EBUILD test-unit-1.2.3.ebuild 814 RMD160 40423511fe7492a1a779a1e5ad3cab9b1d8ee0aa SHA1 0e04b0dd0ae2db37393ef9169abfcda6d92307d1 SHA256 2e9f4cdf47ab0e508b3be817af52ef1d90948b8d241bce6ea8717b7e18483fda
 EBUILD test-unit-2.1.2-r1.ebuild 1284 RMD160 13cf64bb93198206eee35d2f558642d341af6f0a SHA1 d38ee34d3b0e4b895de777a09d1aeb4d0ca80019 SHA256 aaa76121755069dd6f070e5923f9d134e5cbc0ffca9b0250e3e9df4687d14dc7
 EBUILD test-unit-2.1.2.ebuild 1266 RMD160 14a50f505d1092715d9e4e35299156dfd5877af5 SHA1 2a0664f264b61a12765fd1e736b81b659bc1c982 SHA256 ebc1ebd082f9900f64b866cb56548602e076e53e642146e56dd22bcfc1136f19
-EBUILD test-unit-2.4.8.ebuild 1871 RMD160 c92532415f5ce8bb4b2ce0cf02e5a368de503e90 SHA1 86e3093c4ef3c853969977168b87b7d7c955d10e SHA256 56adbbb3d23a55fbab004de1c6b6a001cf710c054264070981508b0c1dda4814
+EBUILD test-unit-2.4.8.ebuild 1268 RMD160 591eaedd4a16ef1143f395db8529e701254c39e5 SHA1 0f11fdd44d16f614410d41e91f85542b08d702e2 SHA256 bb62fa991e880d0c8f980e564aa4a614b30cf5ed3a517092549ae3d09091ec09
 EBUILD test-unit-2.5.0.ebuild 1871 RMD160 3f1f358d5dc0f114139659a9a2d242e4c8c0b1d2 SHA1 62481dd61f8d3041429a8135b6655ff25b4d2e9a SHA256 0594ad3ad66e7875dcff0995bcec6837a4a618f2e8c4b727aa5643d036ad0251
-MISC ChangeLog 8621 RMD160 12238c3b89320dfab91443dfb2c641163b5e0d23 SHA1 4de1058c2bbcb048d067092ec0296fafa4ad61f7 SHA256 926ef801d3cc917b5819c06401d60540661ff0ea2c7bd1f4ae719e73c6192cf3
+MISC ChangeLog 8785 RMD160 9278b7e9546900c6ec7a68fe84d69629ef4cf92e SHA1 6a42bb5a83008c266c4dffd96a50c73f0db20902 SHA256 9950d1eb230d2199387267a505c0cb1be9cb4fd34fdbb72226dce10717c13f6b
 MISC metadata.xml 313 RMD160 64f35fe17cb231f17c18f4ace1656b2389eebd07 SHA1 b2de46ec2cf3be4a04d73fa7a43a704408e0d2be SHA256 70c196238b5e24846ee90d328200906af70156308716e4ec568ae3e148e43813
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk/UN7AACgkQiIP6VqMIqNdD5gD9GBgxAKmQVlFsHzAd1/O/w6Ac
-3/VDVl3ZAmHD7MspSQIA/iAQSk2AlxqvO0b77tD/+Jxf4nk2SPbBztgInSkpUnsj
-=G/wX
+iF4EAREIAAYFAk/WK/QACgkQiIP6VqMIqNcspgEAi/hskqt+Dq4kpYFE3QxP9/r9
+T0sUeyJzMl8n50fLjKAA/R8pVmzJoZb2N3Mb1hNuaZJjiZ+13qmMWq2LyweXi18W
+=Ntay
 -----END PGP SIGNATURE-----
