@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test-unit/test-unit-2.4.8.ebuild,v 1.1 2012/03/07 06:55:40 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test-unit/test-unit-2.4.8.ebuild,v 1.2 2012/06/11 17:33:30 graaff Exp $
 
 EAPI=2
 USE_RUBY="ruby18 ruby19 ree18 jruby"
@@ -14,29 +14,16 @@ RUBY_FAKEGEM_BINWRAP=""
 
 inherit ruby-fakegem
 
-ruby_add_bdepend "doc? ( dev-ruby/yard )"
-# redcloth is also needed to build documentation, but not available for
-# jruby. Since we build documentation with the main ruby implementation
-# only we skip the dependency for jruby in this roundabout way, assuming
-# that jruby won't be the main ruby.
-USE_RUBY=ruby18 ruby_add_bdepend "ruby_targets_ruby18 doc" "( dev-ruby/redcloth )"
-USE_RUBY=ruby19 ruby_add_bdepend "ruby_targets_ruby19 doc" "( dev-ruby/redcloth )"
-USE_RUBY=ree18 ruby_add_bdepend "ruby_targets_ree18 doc" "( dev-ruby/redcloth )"
-
 DESCRIPTION="An improved version of the Test::Unit framework from Ruby 1.8"
 HOMEPAGE="http://test-unit.rubyforge.org/"
 
 LICENSE="Ruby"
 SLOT="2"
 KEYWORDS="~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
-IUSE="doc test"
+IUSE="test"
 
 all_ruby_compile() {
 	all_fakegem_compile
-
-	if use doc; then
-		yard doc --title ${PN} || die
-	fi
 }
 
 each_ruby_test() {
