@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/test-unit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test-unit/ChangeLog,v 1.54 2012/06/10 05:59:07 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/test-unit/ChangeLog,v 1.55 2012/06/11 17:33:30 graaff Exp $
+
+  11 Jun 2012; Hans de Graaff <graaff@gentoo.org> test-unit-2.4.8.ebuild:
+  Drop USE=doc from this version to facilitate bootstrapping a stable tree for
+  ruby19.
 
 *test-unit-2.5.0 (10 Jun 2012)
 
